# ceylon

./: .env.sample  .gitignore  404.html  5-minutes-to-ceylon.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GettingStart.html  README.md  best-practices.html  core-concepts.html  getting-started.html  index.html  mkdocs.yml  playground-start.html  pyproject.toml  quickstart.html  sitemap.xml  technology.html  tutorials.html
bindings/ceylon/: Cargo.toml  README.md  build.rs  pyproject.toml
bindings/ceylon-ai/: Cargo.toml  build.rs  pyproject.toml
bindings/ceylon-ai/src/: ceylon.udl  lib.rs
bindings/ceylon-ai/src/agent/: agent.rs
bindings/ceylon-ai/tests/: ceylon_agent_test.py
bindings/ceylon/ceylon/: __init__.py  base.py  llm_agent.py  runner.py  static_val.py  task_manager.py
bindings/ceylon/ceylon-lib/: agent.py
bindings/ceylon/ceylon/agent/: admin.py  agent.py  agents.py  common.py
bindings/ceylon/ceylon/agents/: agents.py
bindings/ceylon/ceylon/auto/: model.py
bindings/ceylon/ceylon/base/: agents.py  playground.py  support.py  uni_agent.py
bindings/ceylon/ceylon/core/: admin.py  worker.py
bindings/ceylon/ceylon/llm/: __init__.py  agent.py  data.py  data_types.py  job_request.py  llm_agent.py  llm_caller.py  llm_task_coordinator.py  llm_task_executor.py  llm_task_operator.py  manger.py  playground.py  prompt.py  prompt_builder.py  prompts.toml  runner.py  task_admin.py  task_agent.py  task_manager.py  task_operation.py  task_pl.py  tool_registgry.py  types.py  unit.py
bindings/ceylon/ceylon/processor/: agent.py  data.py  playground.py
bindings/ceylon/ceylon/task/: __init__.py  agent.py  data.py  goal_checker.py  manager.py  playground.py  task.py  task_coordinator.py  task_human_intractive_operator.py  task_operation.py  task_operator.py  test.py
bindings/ceylon/ceylon/tools/: file_publisher_tool.py  search_tool.py
bindings/ceylon/ceylon/utils/: agent_monitor.py
bindings/ceylon/ceylon/workspace/: admin.py  message.py  runner.py  worker.py
bindings/ceylon/examples/: __init__.py  app.py  example_one.py  hello_world.py  simple_agent.py
bindings/ceylon/examples/auction/: README.md  auction.py  auction_general.md  auction_general.py  auction_plaground.md  auction_playground.py  single_item_auction.md  single_item_auction.py
bindings/ceylon/examples/blog_writer/: editor_panel.py
bindings/ceylon/examples/llm/: app.py  llm_bank.py  llm_hello.py  llm_task_hello.py  model_ollama.py  process_base_llm_agent.py  process_llm_app.py  simple_app.py  task_llm_app.py  tool_calling_agent.py  tool_dec_agent.py
bindings/ceylon/examples/network_agent/: network_agent.md  server.py  worker_agent.py
bindings/ceylon/examples/process/: hello-processor.md  hello_processor.py
bindings/ceylon/examples/stock_market_analyser/: standalone_mode.py
bindings/ceylon/examples/task/: app.md  app.py  playground-app.md  playground_app.py  task-app-tutorial.md
bindings/ceylon/examples/task_manager/: README.md  advance_playground.py  plagound_task_manager.py  task_manager.py  using-playground.md  without-playground.md
bindings/ceylon/examples/time_scheduling/: README.md  playground_time_scheduling.py  time_scheduling.md  time_scheduling.py
bindings/ceylon/src/: ceylon.udl  ceylon_v1_udl  lib.rs  main.rs  workspace.rs
bindings/ceylon/src/agent/: agent.rs  agent_base.rs  agent_context.rs  agent_impl.rs  agent_impl_old.rs  memory_blockchain.rs  message_types.rs  mod.rs  state.rs  workspace.rs
bindings/ceylon/src/utils/: env.rs
bindings/ceylon/src/workspace/: admin_agent.rs  agent.rs  message.rs  worker_agent.rs  workspace.rs
bindings/ceylon/tests/: ceylon_agent_test.py  llm_agen_test.py  single_llm_agent.py  test_agent.py  test_agents.py  test_prompt.py  test_runner.py
bindings/ceylon/tests/agent/: __init__.py  test_agent_connection.py  test_message_speed.py  workflow_agents.py
bindings/ceylon/tests/example_project/: chat_gpt_task_manager.py  task_manager_ceylon_result.py  tasks_2024-12-12.csv  tasks_2024-12-15.csv
bindings/ceylon/tests/llm_agents/: task_manager-ollama-sub-task-automated.py  task_manager-ollama-sub-task.py  task_manager-ollama-task-automation-with-dependencies.py  task_manager-ollama.py  task_manager-open-ai.py  tasks_with_dependencies.py
bindings/ceylon/tests/llm_test/: LLM_Agents.ipynb  llm_test_open_ai.py  llm_writer.py  stock_analyser.py  stock_analyser_async.py  writing_agent.py
bindings/ceylon/tests/server_agents/: agent_one.py  monitor_agent.py  server_agent.py
bindings/ceylon/tests/state_machine/: guess_number.py  order_state.py  state_sync.py  trafic_light.py  user_signup.py
bindings/ceylon/tests/stm/: agent_stm.py  main.py
bindings/ceylon/tests/tasks/: article-writer-agents-gen-with-tools-openai.py  article-writer-agents-gen-with-tools.py  article-writer-agents-gen.py  article-writer-agents.py  fw_tool.py  llm_software_agency-gorq.py  llm_software_agency.py  manage_tasks-agents.py  manage_tasks.py  sample_game.py  task_agent.py  task_with_human_inputs.py  task_with_human_inputs_llma.py
bindings/ceylon/tests/test_worker/: auction.py  meeting_schedular.py  task_manager.py  test.py  test_game_board.py
bindings/ceylon/tests/tools/: file_publisher_tool_test.py
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/app/: __init__.py
bindings/python/app/ceylonai/: __init__.py  (+1 more)
bindings/python/ceylon-llm/: pyproject.toml
bindings/python/python/: __init__.py  agent.py
bindings/python/src/: lib.rs
examples/greeting_agents/: main.py  pyproject.toml  tic_tac_game.py
libs/ceylon-core/: Cargo.toml
libs/ceylon-core/src/: lib.rs  utils.rs  workspace.rs
libs/ceylon-core/tests/: test_agent.rs  test_uniffied_agent.rs
libs/ceylonai/: Cargo.toml
libs/ceylonai/src/: common.rs  lib.rs
libs/sangathika/: Cargo.toml
libs/sangathika/src/: blockchain.rs  main.rs  peer.rs
libs/sangedama/: Cargo.toml
libs/sangedama/src/: common.rs  lib.rs  main.rs  p2p.rs  peer.rs
libs/sangedama/tests/: direct_messaging.rs
platform/: Cargo.toml
platform/src/: main.rs  manager.rs  service.rs
(+166 files in other folders)
