[package]
name = "rakun"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rakun"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18.0", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.8.3"
log = "0.4.19"
tokio = "1.29.1"
chrono = "0.4.26"
anyhow = "1.0.72"