[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "service"
path = "src/service.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
ceylon = { path = "../bindings/ceylon" }
async-trait = "0.1.82"
tokio = { version = "1.40.0", features = ["full"] }