[package]
name = "ceylon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ceylon"
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.28.1", features = ["tokio", "bindgen", "default"] }
thiserror = "1.0.61"
uuid = { version = "1.10.0", features = ["v4"] }
serde_json = "1.0.128"
sangedama = { path = "../../libs/sangedama" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
async-trait = "0.1.82"
serde = { version = "1.0.210", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
futures = { version = "0.3.30", default-features = true, features = ["default"] }

[build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }
