[package]
name = "ceylon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ceylon"
crate-type = ["cdylib", "rlib"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uniffi = { version = "0.28.1", features = ["tokio", "bindgen", "default"] }

[dependencies]
serde_json = "1.0.135"
sangedama = { path = "../../libs/sangedama" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
async-trait = "0.1.85"
serde = { version = "1.0.217", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
futures = { version = "0.3.31", default-features = true, features = ["default"] }
log = "0.4.22"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }
