[package]
name = "ceylon"
version = "0.22.3"
edition = "2021"
authors = ["Syigen Ltd. <dewmal@syigen.com>"]
license = "Apache-2.0"
description = "Ceylon framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ceylon"
crate-type = ["cdylib", "rlib"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uniffi = { version = "0.28.1", features = ["tokio", "bindgen", "default"] }

[dependencies]
ceylon-core = { path = "../../libs/ceylon-core", version = "0.2.0" }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
async-trait = "0.1.85"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }
