[package]
name = "ceylonai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ceylonai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["gil-refs", "full"] }
#tokio = { version = "1.38.0", features = ["full"] }
sangedama = { version = "0.1.0", path = "../../libs/sangedama" }
async-std = {version = "1.12.0",features = ["default"]}
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"
serde_json = "1.0.117"
crossbeam = "0.8.4"