[tool.poetry]
name = "greeting-agents"
version = "0.1.0"
description = ""
authors = ["dewmal <dewmal@syigen.com>"]
readme = "README.md"
packages = [{include = "greeting_agents"}]

[tool.poetry.dependencies]
python = "^3.11"
rk-core = "^0.1.11"
orjson = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
