[package]
name = "ceylon-core"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Syigen Ltd. <dewmal@syigen.com>"]
description = "Ceylon framework core"
repository = "https://github.com/ceylonai/ceylon"

[dependencies]
serde_json = "1.0.135"
sangedama = { path = "../sangedama", version = "0.1.3" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
async-trait = "0.1.85"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
futures = { version = "0.3.31", default-features = true, features = ["default"] }
log = "0.4.22"
tracing-subscriber = "0.3.19"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }
