[package]
name = "ceylonai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "test-util", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
dotenvy = "0.15.7"
