[package]
name = "sangathika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
tokio = { version = "1.17.0", features = ["full"] }
time = "0.3.36"
