[package]
name = "sangedama"
version = "0.1.2"
edition = "2021"

[dependencies]
futures = "0.3.30"
async-trait = "0.1.82"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
libp2p = { version = "0.54.1", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
    "tls",
    "relay",
    "websocket",
    "dns",
    "autonat",
    "identify",
    "rendezvous",
    "ping",
    "request-response",
] }

sha2 = "0.10.8"
chrono = "0.4.38"
uuid = "1.10.0"
