[package]
name = "sangedama"
version = "0.1.2"
edition = "2021"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
libp2p = { version = "0.54.1", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
    "tls",
    "relay",
    "websocket",
    "dns",
    "autonat",
    "identify",
    "rendezvous",
    "ping",
    "request-response",
] }